
syntax = "proto3";

package micro.arch.srv.auth;

service Auth {
    rpc AccountVerification(Request) returns (Response) {}
    rpc AddLoginCredential(Request) returns (Response) {}
}

message Response {
    bool success = 1;
    Error error = 3;
    AuthInfo info = 5;
}

message Request {
    AuthInfo info = 1;
}

message Error {
    int32 code = 1;
    string detail = 3;
}

enum AuthType {
    Email = 0;
    Mobile = 1;
    Github = 2;
}

message AuthInfo {
    uint32 uid = 1;
    bool verified = 2;
    // use email as default auth type
    AuthType authType = 3;
    string authId = 5;
    string credential = 7;
    int64 latestLoginAt = 8;
    string ipAddr = 9;
    int64 createdAt = 11;
    int64 updatedAt = 13;
}

